-Contact * Contact info separated in component

--- a/src/app/modules/contact/pages/contact.component.html
+++ b/src/app/modules/contact/pages/contact.component.html
@@ -1,6 +1,6 @@
 <!-- this creates a google map on the page with the given lat/lng from -->
 <!-- the component as the initial center of the map: -->
-<div class="container fluid mt-5">
+<!--<div class="container fluid mt-5">
   <div class="container">
     <div class="col-lg-12 d-flex flex-wrap">
       <div class="col-lg-3 col-md-6 d-flex justify-content-center">
@@ -41,8 +41,8 @@
                 [latitude]="lat" [longitude]="lng"
                 [title]="title"></agm-marker>
   </agm-map>
-</div>
-
+</div>-->
+<app-contact-info-component></app-contact-info-component>
 <div class="d-flex justify-content-center">
   <app-contact-form style="max-width: 800px"></app-contact-form>
 </div>
