--- a/src/app/styles/paleta.scss
+++ b/src/app/styles/paleta.scss
@@ -2,3 +2,5 @@
 //$main-font: 'Karla', sans-serif ;
 $main-font: 'Dosis', sans-serif;
 $app-header-font: #606060;
+$main-dark:#3a3a3a;
+$main-light:#696969;
