--- a/src/app/modules/products/pages/products.component.scss
+++ b/src/app/modules/products/pages/products.component.scss
@@ -1,5 +1,40 @@
-.prod-item{
-  img{
+@import "src/app/styles/paleta";
+
+* {
+  font-family: $main-font;
+}
+
+.products-heading_bg {
+  height: 300px;
+  //background-image: url("src/assets/img/lapista-new-2.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: right;
+  max-width: 400px;
+  width: 100%;
+  position: relative;
+  //border-bottom: 1px solid $main-dark;
+  //border-right: 1px solid $main-dark;
+
+  .products-heading_text {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    background: white;
+
+    p {
+      color: black;
+      font-size: 20px;
+      font-weight: 600;
+      padding: 6px 20px;
+      margin: 0;
+      border-left: 1px solid $main-dark;
+    }
+  }
+}
+
+.prod-item {
+  img {
     height: 100%;
     max-height: 200px;
     width: auto;
