-Lapista heading image on home

--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -1,3 +1,10 @@
+<div class="background-image container-fluid position-relative d-flex justify-content-center align-items-center">
+    <div class="container position-absolute bg-img-content">
+        <h1>{{'NewCollectionTitle' | translate}}</h1>
+        <button class="lapista-button-default position-relative">{{'viewNewCollection' | translate}}</button>
+    </div>
+</div>
+
 <div class="container-fluid d-flex flex-column p-0">
     <div class="slider-wrapper d-flex justify-content-center" style="overflow: hidden">
         <div class="slider-content d-flex justify-content-center" style="max-width: 840px;width: 100%">
