--- a/src/app/core/components/toolbar/toolbar.component.scss
+++ b/src/app/core/components/toolbar/toolbar.component.scss
@@ -19,13 +19,9 @@
 
   p.toolbar-main-menu-item {
     cursor: pointer;
-    //border: 1px solid rgba(0, 0, 0, 0);
-    //transition: 0.5s;
-    //padding: 5px 25px;
     font-weight: normal;
     color: $app-header-font;
     font-size: 15px;
-    //font-weight: bold;
     outline: none;
     border: 2px solid transparent;
     padding: 5px 15px;
@@ -33,9 +29,6 @@
     transition: 0.5s;
 
     &:hover {
-      //@include magic-border(2px, blue, 2.3s, 0);
-      //transition: 0.5s;
-      //background: #eeeeee;
       transition: 0.5s;
       border-bottom: 2px solid rgba(0, 0, 0, 0.7);
     }
@@ -105,7 +98,6 @@ p.selected-language {
 
 // new menu for mobile
 .toolbar-mobile {
-  //border-bottom: 0.5px solid rgba(93,93,93,0.3);
   height: 40px;
   position: fixed;
   z-index: 12;
@@ -145,41 +137,47 @@ p.selected-language {
   /* MENU ITEMS */
   .toolbar-mobile-left_mobile-menu {
     width: 70%;
-    background: rgba(0, 0, 0, 0.9);
+    background: rgba(255, 255, 255, 0.9);
     z-index: 11;
     top: 40px;
     height: 100%;
     position: fixed;
+    border-right: 1px solid rgba(144, 144, 144, 0.46);
 
     ul {
       text-decoration: none;
       list-style: none;
-      margin: 0 0 0 20px;
+      margin: 0;
       padding: 12px 0;
 
       li {
         display: flex;
         align-items: center;
         height: 42px;
-        font-size: 16px;
-        font-weight: bold;
-        color: white;
+        font-size: 18px;
+        font-weight: normal;
+        padding-left: 24px;
+        color: #606060;
+        border-bottom: 1px solid rgba(144, 144, 144, 0.46);
+
         &.active-item-mobile {
           border-bottom: 1px solid #ff0000;
           color: #ff0000;
+          font-weight: bold;
         }
       }
     }
   }
 
-  .toolbar-mobile-wrapper{
-    .toolbar-mobile-right{
-      .lang-container{
+  .toolbar-mobile-wrapper {
+    .toolbar-mobile-right {
+      .lang-container {
         right: 11px;
         bottom: -56px;
-        .lang-content{
-          .lang-item{
-            padding: 4px!important;
+
+        .lang-content {
+          .lang-item {
+            padding: 4px !important;
           }
         }
       }
