--- a/src/app/core/components/home-four-images/home-four-images.component.html
+++ b/src/app/core/components/home-four-images/home-four-images.component.html
@@ -1,35 +1,3 @@
-<!--<div class="container-fluid px-0 mx-0 my-5 overflow-hidden">
-  <div class="col-lg-12 d-flex flex-wrap flex-sm-wrap-reverse">
-    <div class="col-lg-5">
-      <img
-        src="https://en.identitashoes.com/m/tel/imghomedic2.png"
-        alt=""
-        class="img-fluid"
-      />
-    </div>
-    <div
-      class="col-lg-7 d-flex flex-column justify-content-center align-items-center mt-3"
-    >
-      <p class="text-uppercase" style="letter-spacing: 2px; font-size: 22px;">
-        <b>Lapista universe</b>
-      </p>
-      <p style="font-size: 14px; letter-spacing: 1.5px; max-width: 800px;">
-        {{"HOME.universeText" | translate}}
-        <br />
-        <b style="font-size: 16px;"
-          >{{"HOME.universeTextBold" | translate}}
-        </b>
-      </p>
-      <button
-        [routerLink]="'/about'"
-        class="mb-5"
-        style="border-radius: 0px;border: 1px solid black;height: 40px;padding: 5px 25px;background: transparent;outline: none;">
-        {{"HOME.universeMore" | translate}}
-      </button>
-    </div>
-  </div>
-</div>-->
-
 <div class="container-fluid my-5">
   <div class="container d-flex justify-content-center">
     <div
@@ -46,7 +14,7 @@
 <!--Four images-->
 <div class="container-fluid">
   <div class="row four-images-row">
-    <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/pumps'">
+   <!-- <div class="col-lg-3 col-md-6 one-of-four" [routerLink]="'products/pumps'">
       <img
         src="assets/img/cipele.png"
         alt=""
@@ -86,6 +54,11 @@
       <div class="image-overlay">
         <p>{{"HOME.FOURIMAGES.bags" | translate}}</p>
       </div>
+    </div>-->
+    <div class="col-lg-3 col-md-6 one-of-four" *ngFor="let i of [1,2,3,4]">
+      <img [src]="'assets/img/lapista-bottom-' + i + '.jpeg'"
+              alt="lapista cipele belville"
+              class="img-fluid position-relative one-four-image"/>
     </div>
   </div>
 </div>
