-cart items fix

--- a/src/app/modules/cart/pages/cart.component.scss
+++ b/src/app/modules/cart/pages/cart.component.scss
@@ -1,6 +1,6 @@
 .shopping-cart-container {
   .shopping-cart-item {
-    border: 2px solid #606060;
+    border-bottom: 1px solid #606060;
     padding: 0 10px;
     margin: 10px;
 
