Lapista models, separated layout - new layout for lapista shoes because we need it separated only by color - new lapista module,product text & product image made to accept param - other minor changes

--- a/src/app/core/components/product-detail-image/product-detail-image.component.html
+++ b/src/app/core/components/product-detail-image/product-detail-image.component.html
@@ -5,3 +5,9 @@
   alt="La pista-Belville-single product image"
   style="height: 300px; width: 300px; object-fit: cover;"
 />
+<!--<img
+        [src]="'../../../../assets/img/items/' + detailImage "
+        sizes="100vw"
+        alt="La pista-Belville-single product image"
+        style="height: 300px; width: 300px; object-fit: cover;"
+/>-->
