--- a/src/app/modules/home/pages/home.component.scss
+++ b/src/app/modules/home/pages/home.component.scss
@@ -21,7 +21,8 @@
     h1{
       margin-bottom: 60px;
       font-family: $main-font;
-      color: $main-dark;
+      //color: $main-dark;
+      color: white;
       font-size: 46px;
       font-weight: 700;
     }
