toolbar route,home button - home button redirect to lapista products - toolbar removed identita menu-item

--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -13,7 +13,7 @@
     </div>
     <div class="container justify-content-center d-flex">
         <button class="lapista-button-default-bold my-2"
-                [routerLink]="'products/shoes'">{{'viewAll' | translate}}</button>
+                [routerLink]="'products/lapista'">{{'NewCollectionTitle' | translate}}</button>
     </div>
 </div>
 <div class="container-fluid">
