Add to card button fix

--- a/src/app/core/components/product-detail-text/product-detail-text.component.html
+++ b/src/app/core/components/product-detail-text/product-detail-text.component.html
@@ -150,7 +150,7 @@
     <p class="mb-2">{{ detailText?.item?.description | translate | uppercase }}</p>
 
     <button class="add-to-cart-button"
-
+            [disabled]="!selectedHeel"
             (click)="updateCart('lapista')">
         {{'ITEMDETAIL.addToCart'| translate }}
     </button>
