--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -11,10 +11,10 @@
             <app-slider style="z-index: 10" [slideItems]="randomItems"></app-slider>
         </div>
     </div>
-    <div class="container justify-content-center d-flex">
-        <button class="lapista-button-default-bold my-2"
-                [routerLink]="'products/lapista'">{{'NewCollectionTitle' | translate}}</button>
-    </div>
+<!--    <div class="container justify-content-center d-flex">-->
+<!--        <button class="lapista-button-default-bold my-2"-->
+<!--                [routerLink]="'products/lapista'">{{'NewCollectionTitle' | translate}}</button>-->
+<!--    </div>-->
 </div>
 <div class="container-fluid">
     <div class="container">
