--- a/src/app/core/components/footer/footer.component.scss
+++ b/src/app/core/components/footer/footer.component.scss
@@ -42,6 +42,12 @@ p {
       border-left: 1px solid $app-header-font;
     }
   }
+  //new
+  .new-order{
+    p{
+      margin:0 24px 0 0;
+    }
+  }
 }
 
 @media screen and (max-width: 500px) {
