--- a/src/app/core/components/slider/slider.component.scss
+++ b/src/app/core/components/slider/slider.component.scss
@@ -1,6 +1,6 @@
 @import "../../../../../src/app/styles/paleta.scss";
 
-carousel {
+carousel.sale-items {
   height: 360px !important;
   //width: 100%;
 
