--- a/src/app/core/components/slider/slider.component.html
+++ b/src/app/core/components/slider/slider.component.html
@@ -32,7 +32,7 @@
           [loop]="sliderSettings.loop"
           [arrowsTheme]="sliderSettings.arrowsTheme"
           [arrowsOutside]="sliderSettings.arrowsOutside"
-          [cellsToShow]="sliderSettings.cellsToShow"
+          [cellsToShow]="isHandset?2:5"
           [objectFit]="sliderSettings.objectFit"
           [height]="sliderSettings.height"
 >
