--- a/src/app/modules/home/pages/home.component.html
+++ b/src/app/modules/home/pages/home.component.html
@@ -6,13 +6,13 @@
     </div>
 </div>
 
-<div class="container-fluid d-flex flex-column p-0">
+<!--<div class="container-fluid d-flex flex-column p-0">
     <div class="slider-wrapper d-flex justify-content-center" style="overflow: hidden">
         <div class="slider-content d-flex justify-content-center" style="max-width: 840px;width: 100%">
             <app-slider style="z-index: 10" [slideItems]="randomItems" [slideType]="'product'"></app-slider>
         </div>
     </div>
-</div>
+</div>-->
 
 <div class="container-fluid" style="max-width: 1080px;margin-top: 45px;margin-bottom: 45px">
     <app-slider style="z-index: 10" [slideItems]="slideImages" [slideType]="'basic'"></app-slider>
